--- a/src/widgets/_global.scss
+++ b/src/widgets/_global.scss
@@ -100,3 +100,12 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+.block-content{
+  padding-left:0;
+  padding-right:0;
+  @include lg(){
+    padding-left:100px;
+  padding-right:100px;
+  }
+}
